自动创建配置文件，修复BUG