@@ -3,6 +3,7 @@ package com.oneidler.syncwaypoint;
 import com.google.gson.Gson;
 import com.google.gson.reflect.TypeToken;
 import com.oneidler.syncwaypoint.command.SyncCommand;
+import com.oneidler.syncwaypoint.config.ConfigManager;
 import com.oneidler.syncwaypoint.network.WaypointPayload;
 import com.oneidler.syncwaypoint.pojo.LocationMarkerWaypoint;
 import com.oneidler.syncwaypoint.utils.CollUtil;
@@ -29,8 +30,7 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
 
     @Override
     public void onInitialize() {
-        log.info("SyncWaypointMod 初始化 (服务端)");
-
+        ConfigManager.load();
         // 注册服务端→客户端数据包类型
         //#if MC < 260100
         PayloadTypeRegistry.playS2C().register(WaypointPayload.TYPE, WaypointPayload.STREAM_CODEC);
@@ -42,14 +42,6 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
         CommandRegistrationCallback.EVENT.register((dispatcher, registryAccess, environment) -> {
             SyncCommand.register(dispatcher);
         });
-
-        log.info("使用 /syncwp 手动同步路径点");
-    }
-
-    @Override
-    public void onInitializeClient() {
-        // 客户端数据包接收器已在 WaypointSyncHandler 中注册
-        log.info("SyncWaypointMod 初始化 (客户端)");
     }
 
     /**
@@ -58,23 +50,17 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
     public static List<WaypointPayload.Waypoint> fetchWaypointsFromMCDR() {
         List<WaypointPayload.Waypoint> waypoints = Collections.emptyList();
         try {
-            // 获取 Fabric 的标准配置目录 (即服务端的 config 文件夹)
-            Path configDir = FabricLoader.getInstance().getConfigDir();
-
-            // 模组自己的配置文件路径：config/syncwaypoint/locations.json
-            Path waypointFile = configDir.resolve("syncwaypoint").resolve("locations.json");
-
-            // 检查文件是否存在
-            if (!Files.exists(waypointFile)) {
-                log.warn("找不到路径点文件: {}", waypointFile);
-                log.info("请创建符号链接: config/syncwaypoint/locations.json -> MCDR的config/location_marker/locations.json");
+            String filePath = ConfigManager.CONFIG.getFile();
+            if (filePath == null || filePath.isEmpty()) {
+                log.warn("Waypoint file path is not configured, skipping sync");
                 return waypoints;
             }
-
-            String content = new String(Files.readAllBytes(waypointFile));
-
-            // 2. 解析 JSON 文件
-            // locations.json 的格式是一个 JSON 数组
+            Path path = Path.of(filePath);
+            if (!Files.exists(path)) {
+                log.warn("Waypoint file not found: {}", filePath);
+                return waypoints;
+            }
+            String content = Files.readString(path);
             Gson gson = new Gson();
             List<LocationMarkerWaypoint> list = gson.fromJson(content, new TypeToken<>() {
 
@@ -82,7 +68,6 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
             if (CollUtil.isEmpty(list)) {
                 return waypoints;
             }
-            log.info("从 Location Marker 读取到 {} 个路径点", list.size());
             return list.stream()
                     .map(e ->
                             new WaypointPayload.Waypoint(e.getName(),
@@ -93,7 +78,7 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
                     )
                     .toList();
         } catch (Exception e) {
-            log.error("获取 Location Marker 路径点失败: {}", e.getMessage(), e);
+            log.error("Failed to get waypoint: {}", e.getMessage(), e);
         }
         return waypoints;
     }
@@ -104,18 +89,23 @@ public class SyncWaypointMod implements ModInitializer, ClientModInitializer {
     public static void syncWaypointsToClient(ServerPlayer player) {
         if (!ServerPlayNetworking.canSend(player, WaypointPayload.TYPE)) {
             player.sendSystemMessage(
-                    Component.literal("§e[同步] 你的客户端未安装 SyncWaypointMod，无法同步路径点"),
+                    Component.translatable(SyncWaypointMod.MOD_ID + ".message.client_not_installed"),
                     false
             );
             return;
         }
         List<WaypointPayload.Waypoint> waypoints = fetchWaypointsFromMCDR();
         if (waypoints == null || waypoints.isEmpty()) {
-            player.sendSystemMessage(Component.literal("§e[同步] 没有从 MCDR 获取到路径点"), false);
+            player.sendSystemMessage(Component.translatable(SyncWaypointMod.MOD_ID + ".message.no_waypoints"), false);
             return;
         }
         WaypointPayload payload = new WaypointPayload(waypoints);
         ServerPlayNetworking.send(player, payload);
-        player.sendSystemMessage(Component.literal("§a[同步] 已发送 " + waypoints.size() + " 个路径点到客户端"), false);
+        player.sendSystemMessage(Component.translatable(SyncWaypointMod.MOD_ID + ".message.synced", waypoints.size()), false);
+    }
+
+    @Override
+    public void onInitializeClient() {
+
     }
 }
